--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="vi">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dự án Cuối Khóa của Tôi</title>
+</head>
+
+<body>
+
+    <main>
+        <h1>Chào mừng đến với Trang Web của Tôi</h1>
+        <h2>Giới thiệu về sở thích</h2>
+
+        <img src="https://via.placeholder.com/300" alt="Mô tả hình ảnh minh họa">
+
+        <p>Đây là danh sách những điều tôi đã học được trong khóa học này:</p>
+
+        <ul>
+            <li>Cấu trúc cơ bản của HTML5</li>
+            <li>Cách sử dụng các thẻ ngữ nghĩa (Semantic tags)</li>
+            <li>Cách tối ưu khả năng truy cập (Accessibility)</li>
+        </ul>
+    </main>
+
+</body>
+
+</html>
 
